--- a/.github/workflows/daily_collection.yml
+++ b/.github/workflows/daily_collection.yml
@@ -33,4 +33,5 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git add 10Pearls2/karachi_aqi.csv
           git commit -m "Update AQI data for $(date +'%Y-%m-%d')" || echo "No changes to commit"
-          git push
+          git push https://alina1114:${{ secrets.GH_PAT }}@github.com/alina1114/AQI_Predictor.git HEAD:master
+
