--- a/.github/workflows/preprocessing_pipeline.yml
+++ b/.github/workflows/preprocessing_pipeline.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git add preprocessed_aqi_data.csv
+          git add 10Pearls2/preprocessed_aqi_data.csv
           git commit -m "Update preprocessed AQI data for $(date +'%Y-%m-%d %H:%M')" || echo "No changes to commit"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/alina1114/AQI_Predictor.git HEAD:master
