--- a/.github/workflows/run_selected_feature_pipeline.yml
+++ b/.github/workflows/run_selected_feature_pipeline.yml
@@ -5,6 +5,10 @@ on:
     - cron: "0 * * * *"  # Runs every hour
   workflow_dispatch:  # Allows manual run from GitHub UI
 
+# Give GitHub token permission to push
+permissions:
+  contents: write
+
 jobs:
   run-selected-features:
     runs-on: ubuntu-latest
@@ -22,20 +26,16 @@ jobs:
         run: |
           pip install pandas numpy "hopsworks[python]" pyarrow
 
-
-      - name:  Run Selected Features Script
+      - name: Run Selected Features Script
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         run: |
           python "10Pearls2/EDA and Feature Selection/automate_selected_features.py"
 
-
       - name: Commit Updated Selected Features CSV
         run: |
-         git config --global user.name "github-actions"
-         git config --global user.email "github-actions@github.com"
-         git add "10Pearls2/automated_selected_features_for_modeling.csv"
-         git commit -m "Update automated selected features CSV"
-         git push
-
-
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add "10Pearls2/automated_selected_features_for_modeling.csv"
+          git commit -m "Update automated selected features CSV" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/alina1114/AQI_Predictor.git HEAD:master
