--- a/.github/workflows/daily_aqi_train.yml
+++ b/.github/workflows/daily_aqi_train.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:         # Allows manual run from GitHub UI
 
 permissions:
-  contents: write            # Required to push commits to the repo
+  contents: write
 
 jobs:
   train-and-forecast:
@@ -14,7 +14,6 @@ jobs:
     timeout-minutes: 60
 
     env:
-      # -------- Script configuration --------
       HOPSWORKS_PROJECT: aqi_predictor1
       MODEL_REMOTE_DIR: Models/sarimax_aqi/2
       REMOTE_PRED_BASE: Resources/aqi_predictions
@@ -26,35 +25,54 @@ jobs:
       FEATURES_JSON: final_feature_list.json
       AQI_HORIZON: "72"
       AQI_TEST_FRAC: "0.20"
-      AQI_TRAIN_WINDOW: "all"     # or e.g., "365" for last 365 days
+      AQI_TRAIN_WINDOW: "all"
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+
+      - name: Show working dir and list files
+        run: |
+          pwd
+          ls -la
+          ls -la "10Pearls2/Model_Training" || true
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
+      # Pin versions to avoid common runtime/import errors (NumPy<2 for statsmodels, Hopsworks 4.2.x)
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "hopsworks[python]==4.2.*" \
-                      "hsfs==3.*" \
-                      pyarrow \
-                      statsmodels scikit-learn joblib numpy pandas
+          pip install "hopsworks[python]==4.2.*" "hsfs==3.*" pyarrow
+          pip install "numpy<2" "pandas>=1.5,<3" "statsmodels==0.14.2" scikit-learn joblib
+          python -c "import sys, numpy, pandas, statsmodels; print('Py:', sys.version); print('numpy', numpy.__version__); print('pandas', pandas.__version__); print('statsmodels', statsmodels.__version__)"
+
+      - name: Verify training script exists
+        run: |
+          test -f "10Pearls2/Model_Training/daily_aqi_train.py" && echo "Found training script." || (echo "Training script missing!" && exit 1)
 
       - name: Run Daily AQI Training Script
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         run: |
+          if [ -z "${HOPSWORKS_API_KEY}" ]; then
+            echo "ERROR: HOPSWORKS_API_KEY secret is not set."; exit 1
+          fi
           python "10Pearls2/Model_Training/daily_aqi_train.py" --horizon 72
 
-      - name: Commit Updated Forecast CSV
+      - name: Commit Updated Forecast CSV (non-fatal if none)
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git add artifacts/predictions/*.csv
-          git commit -m "Update daily AQI forecast CSV" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:master
+          shopt -s nullglob
+          files=(artifacts/predictions/*.csv)
+          if [ ${#files[@]} -gt 0 ]; then
+            git add "${files[@]}"
+            git commit -m "Update daily AQI forecast CSV"
+            git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}" HEAD:master
+          else
+            echo "No CSVs to commit (training/forecast likely failed earlier)."
+          fi
