--- a/.github/workflows/daily_aqi_train.yml
+++ b/.github/workflows/daily_aqi_train.yml
@@ -26,6 +26,7 @@ jobs:
       AQI_HORIZON: "72"
       AQI_TEST_FRAC: "0.20"
       AQI_TRAIN_WINDOW: "all"
+      HSFS_ENGINE: python    # force HSFS to use the Python/Arrow engine
 
     steps:
       - name: Checkout Repository
@@ -40,17 +41,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.10"
 
-      # Pin versions to avoid common runtime/import errors (NumPy<2 for statsmodels, Hopsworks 4.2.x)
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          # Match backend version and install Arrow Flight extras for both hopsworks & hsfs
-          pip install "hopsworks[python]==4.2.*" "hsfs[python]==3.*"
+          # Match Hopsworks backend 4.2.x and include Arrow Flight extras for BOTH clients
+          pip install "hopsworks[python]==4.2.6" "hsfs[python]==3.4.*"
           # Stable scientific stack for statsmodels
           pip install "numpy<2" "pandas>=1.5,<3" "statsmodels==0.14.2" scikit-learn joblib
-          # Show versions for debugging
+          # Print versions for quick debugging
           python -c "import sys, numpy, pandas, statsmodels, hopsworks, hsfs; \
             print('Py:', sys.version); \
             print('numpy', numpy.__version__); \
