--- a/.github/workflows/daily_aqi_train.yml
+++ b/.github/workflows/daily_aqi_train.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade hopsworks==4.2.7 pandas requests pyarrow scikit-learn statsmodels joblib --no-cache-dir
+          pip install --upgrade hopsworks==4.2.7 pandas requests pyarrow scikit-learn statsmodels confluent-kafka joblib --no-cache-dir
 
       - name: Run AQI update script
         working-directory: ./10Pearls2
